--- a/templates/ntp.conf.erb
+++ b/templates/ntp.conf.erb
@@ -19,9 +19,9 @@ restrict -6 ::1
 
 # Use public servers from the pool.ntp.org project.
 # Please consider joining the pool (http://www.pool.ntp.org/join.html).
-<% Array(@ntpserv).each do |server| %>
-    server <%= server %> iburst
-<% end %>
+
+server <%= node [vertis-ntp] [servers] %> iburst
+
 #broadcast 192.168.1.255 autokey        # broadcast server
 #broadcastclient                        # broadcast client
 #broadcast 224.0.1.1 autokey            # multicast server
