--- a/templates/ntp.conf.erb
+++ b/templates/ntp.conf.erb
@@ -20,7 +20,7 @@ restrict -6 ::1
 # Use public servers from the pool.ntp.org project.
 # Please consider joining the pool (http://www.pool.ntp.org/join.html).
 
-server <%= node[vertis-ntp][servers] %> iburst
+server <%= node['vertis-ntp']['servers'] %> iburst
 
 #broadcast 192.168.1.255 autokey        # broadcast server
 #broadcastclient                        # broadcast client
